tests/invalid/list_magic_iadd_wrong_type/main.py
def run_case() -> None:
    xs: list[int] = [1]
    xs.__iadd__(3)


if __name__ == "__main__":
    run_case()
